[package]
name = "actix-default-responder"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["sam <contact@justsam.io"]
repository = "https://github.com/jsam/actix-default-responder"
description = "Procedural macro for generating default `Responder` implementation for a specific data type (ie. json, xml, etc)."
keywords = ["actix", "actix-web", "json", "xml"]
license = "MIT/Apache-2.0"
include = ["src/", "LICENSE-*", "README.md"]

[lib]
proc-macro = true


[dependencies]
syn = "2.0"
quote = "1.0"

[dev-dependencies]
actix-web = { version = "4.0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6.0"
bincode = "1.3.3"
